GNOME Bugzilla – Bug 704680
Printer warnings are not translated
Last modified: 2013-07-22 14:14:44 UTC
Created attachment 249795 [details] [review] Translate printer warnings Some strings are not correctly marked for translation. Attached patch fixes this.
Review of attachment 249795 [details] [review]: Looks good, for gnome-3-8 as well.
Comment on attachment 249795 [details] [review] Translate printer warnings Thank you for the review. I've pushed the patch to gnome-3-8 and master.