print-notifications: Translate printer warnings

Mark printer warnings for translation.

https://bugzilla.gnome.org/show_bug.cgi?id=704680